# Plonky3

./: .gitignore  .taplo.toml  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  WARP.txt  WHIR.txt  cliff.toml  cratesio_publish.sh  create_release.sh  lockstep_version_bump.sh  poseidon1_babybear.sage  poseidon1_babybear.sage.py  poseidon1_babybear_24.sage  poseidon1_babybear_24.sage.py  poseidon1_goldilocks.sage  poseidon1_goldilocks.sage.py  poseidon1_koalabear.sage  poseidon1_koalabear.sage.py  poseidon2_babybear.sage  poseidon2_babybear.sage.py  poseidon2_goldilocks.sage  poseidon2_goldilocks.sage.py  poseidon2_koalabear.sage  poseidon2_koalabear.sage.py  poseidon_constants.sage  release-plz.toml  tarpaulin-report.html  tomlfmt.toml
air/: CHANGELOG.md  Cargo.toml
air/src/: air.rs  air_claims.rs  builder.rs  check_constraints.rs  config.rs  constraint_consumer.rs  cumulative_product.rs  evaluator.rs  filtered.rs  lib.rs  multi.rs  named.rs  symbolic.rs  two_row_matrix.rs  types.rs  utils.rs  virtual_column.rs  window.rs
baby-bear/: CHANGELOG.md  Cargo.toml  README.md
baby-bear/benches/: bench_field.rs  extension.rs  field_array_exponentiation.rs  inverse.rs  mul.rs  multi_mul.rs  packed_extension.rs  root_7.rs  sum.rs  sve_packing.rs
baby-bear/src/: aarch64_neon.rs  baby_bear.rs  extension.rs  extension_test.rs  lib.rs  mds.rs  non_canonical.rs  poseidon.rs  poseidon1.rs  poseidon2.rs  poseidon2_air.rs  quadratic_ext.rs  x86_64_avx2.rs  x86_64_avx512.rs
baby-stark/: Cargo.toml
baby-stark/src/: builder.rs  config.rs  folder.rs  lib.rs  prover.rs  sym_var.rs  window.rs
baby-stark/tests/: mul_air.rs
batch-stark/: CHANGELOG.md  Cargo.toml  README.md
batch-stark/benches/: lookup.rs  prove_batch.rs
batch-stark/src/: check_constraints.rs  common.rs  config.rs  error.rs  lib.rs  proof.rs  prover.rs  symbolic.rs  transcript.rs  verifier.rs
batch-stark/tests/: simple.rs
blake3/: CHANGELOG.md  Cargo.toml
blake3-air/: CHANGELOG.md  Cargo.toml
blake3-air/examples/: prove_blake3_baby_bear_keccak.rs  prove_blake3_baby_bear_poseidon2.rs  prove_blake3_koala_bear_keccak.rs  prove_blake3_koala_bear_poseidon2.rs  prove_blake3_m31_keccak.rs  prove_blake3_m31_poseidon2.rs
blake3-air/src/: air.rs  columns.rs  constants.rs  generation.rs  lib.rs
blake3/src/: lib.rs
bls12-377-fr/: Cargo.toml
bls12-377-fr/benches/: bench_field.rs
bls12-377-fr/src/: lib.rs  poseidon2.rs  rc.rs
bn254/: CHANGELOG.md  Cargo.toml
bn254-fr/: Cargo.toml
bn254-fr/benches/: bench_field.rs
bn254-fr/src/: helpers.rs  lib.rs  poseidon2.rs
bn254/benches/: bench_field.rs
bn254/src/: bn254.rs  helpers.rs  lib.rs  poseidon2.rs
brakedown/: Cargo.toml
brakedown/benches/: encode.rs  field_batch.rs
brakedown/src/: brakedown_code.rs  lib.rs  macros.rs  standard_fast.rs
challenger/: CHANGELOG.md  Cargo.toml  README.md
challenger/src/: babybear_bn254_challenger.rs  duplex_challenger.rs  grinding_challenger.rs  hash_challenger.rs  lib.rs  mock_challenger.rs  multi_field_challenger.rs  serializing_challenger.rs
circle/: CHANGELOG.md  Cargo.toml  README.md
circle/benches/: cfft.rs
circle/examples/: lde.rs
circle/src/: cfft.rs  cfft2.rs  deep_quotient.rs  domain.rs  folding.rs  lib.rs  ordering.rs  pcs.rs  periodic.rs  point.rs  proof.rs  prover.rs  twiddles.rs  util.rs  utilities.rs  verifier.rs
circuit/: Cargo.toml
circuit-prover/: Cargo.toml
circuit-prover/benches/: prover.rs
circuit-prover/examples/: fibonacci.rs  poseidon2_perm_chain.rs  poseidon2_perm_merkle.rs
circuit-prover/src/: batch_stark_prover.rs  common.rs  config.rs  constraint_profile.rs  field_params.rs  lib.rs  whir_native.rs  whir_native_air.rs  whir_native_bus.rs  whir_native_poseidon2.rs  whir_native_sumcheck.rs
circuit-prover/tests/: npo_integration.rs
circuit/benches/: runner_traces.rs
circuit/examples/: allocation_log.rs
circuit/src/: alloc_entry.rs  circuit.rs  errors.rs  expr.rs  lib.rs  test_utils.rs  types.rs
commit/: CHANGELOG.md  Cargo.toml  README.md
commit/src/: domain.rs  lib.rs  mmcs.rs  oracle.rs  pcs.rs  periodic.rs  soundness.rs  testing.rs  uni_from_multi.rs  vector_commit.rs
coset/: Cargo.toml  README.md
coset/benches/: coset.rs
coset/src/: lib.rs  tests.rs
dft/: CHANGELOG.md  Cargo.toml  README.md
dft/benches/: fft.rs
dft/src/: algo.rs  butterflies.rs  chunked.rs  four_step.rs  lib.rs  naive.rs  radix_2_bowers.rs  radix_2_bowers_g.rs  radix_2_bowers_g_t.rs  radix_2_dit.rs  radix_2_dit_parallel.rs  radix_2_dit_small_batch.rs  radix_2_small_batch.rs  testing.rs  traits.rs  util.rs
dft/tests/: testing.rs
examples/: CHANGELOG.md  Cargo.toml
examples/examples/: asm_test_babybear.rs  asm_test_goldilocks.rs  batch_merkle_compression.rs  prove_monty_31.rs  prove_monty_31_keccak.rs  prove_prime_field_31.rs  temp.rs
examples/src/: airs.rs  dfts.rs  generate_challenges_example.rs  lib.rs  parsers.rs  proofs.rs  tests.rs  types.rs
fibnonacci-air/: Cargo.toml
fibnonacci-air/examples/: prove_baby_bear_poseidon2.rs
fibnonacci-air/src/: lib.rs
field/: CHANGELOG.md  Cargo.toml  README.md
field-testing/: CHANGELOG.md  Cargo.toml
field-testing/src/: algebra_testing.rs  based_vectorspace_testing.rs  bench_func.rs  dft_testing.rs  extension_testing.rs  from_integer_tests.rs  lib.rs  packedfield_testing.rs
field/benches/: batch_inverse.rs
field/src/: array.rs  batch_inverse.rs  cipolla_sqrt.rs  coset.rs  dup.rs  exponentiation.rs  extension2.rs  field.rs  field_like.rs  helpers.rs  integers.rs  interleaves.rs  lib.rs  mersenne31.rs  non_canonical.rs  op_assign_macros.rs  packed.rs  restriction.rs  sqrt.rs  symbolic.rs  trivial_extension.rs  utils.rs  vectorized.rs
fri/: CHANGELOG.md  Cargo.toml  README.md
fri-testing/: Cargo.toml
goldilocks/: CHANGELOG.md  Cargo.toml
goldilocks-monty/: Cargo.toml  bench_avx2.sh  benchmark_comparison.md
goldilocks-wasm-benchmark/: Cargo.toml  README.md  index.html
interpolation/: CHANGELOG.md  Cargo.toml
keccak/: CHANGELOG.md  Cargo.toml
keccak-air/: CHANGELOG.md  Cargo.toml
(+1261 files in other folders)
