[workspace]
resolver = "2"
members = [
    "air",
    "baby-bear",
    "batch-stark",
    "blake3",
    "blake3-air",
    "bn254",
    "challenger",
    "circle",
    "commit",
    "dft",
    "examples",
    "field",
    "field-testing",
    "fri",
    "goldilocks",
    "interpolation",
    "keccak",
    "keccak-air",
    "koala-bear",
    "lookup",
    "matrix",
    "maybe-rayon",
    "mds",
    "merkle-tree",
    "mersenne-31",
    "monolith",
    "monty-31",
    "multilinear-util",
    "poseidon",
    "poseidon2",
    "poseidon2-air",
    "rescue",
    "sha256",
    "symmetric",
    "uni-stark",
    "util",
]

[workspace.lints]
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unused_must_use = "deny"
rust.rust_2024_incompatible_pat = "warn"
rustdoc.all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Some pedantic lints
semicolon_if_nothing_returned = "warn"
match_bool = "warn"
needless_pass_by_value = "warn"

redundant_pub_crate = "allow"
too_long_first_doc_paragraph = "allow"
unused_peekable = "allow"
tuple_array_conversions = "allow"
transmute_undefined_repr = "allow"
cognitive_complexity = "allow"

[workspace.dependencies]
blake3 = { version = "1.5", default-features = false }
clap = { version = "4.5.23", features = ["derive"] }
clap_derive = "4.5.18"
criterion = "0.8"
hashbrown = "0.16.0"
hex-literal = "1.0.0"
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
num-bigint = { version = "0.4.3", default-features = false }
paste = "1.0.15"
postcard = { version = "1.0.0", default-features = false }
proptest = "1.8"
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
rand_xoshiro = "0.7.0"
rayon = "1.11.0"
serde = { version = "1.0", default-features = false }
serde_json = "1.0.113"
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
spin = "0.10.0"
thiserror = { version = "2.0", default-features = false }
tiny-keccak = "2.0.2"
tracing = { version = "0.1.37", default-features = false, features = [
    "attributes",
] }
tracing-forest = "0.3.0"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "alloc",
] }
transpose = "0.2.3"

# Local dependencies
p3-air = { path = "air", version = "0.4.2" }
p3-baby-bear = { path = "baby-bear", version = "0.4.2" }
p3-blake3 = { path = "blake3", version = "0.4.2" }
p3-blake3-air = { path = "blake3-air", version = "0.4.2" }
p3-bn254 = { path = "bn254", version = "0.4.2" }
p3-challenger = { path = "challenger", version = "0.4.2" }
p3-circle = { path = "circle", version = "0.4.2" }
p3-commit = { path = "commit", version = "0.4.2" }
p3-dft = { path = "dft", version = "0.4.2" }
p3-examples = { path = "examples", version = "0.3.0" }
p3-field = { path = "field", version = "0.4.2" }
p3-field-testing = { path = "field-testing", version = "0.4.2" }
p3-fri = { path = "fri", version = "0.4.2" }
p3-goldilocks = { path = "goldilocks", version = "0.4.2" }
p3-interpolation = { path = "interpolation", version = "0.4.2" }
p3-keccak = { path = "keccak", version = "0.4.2" }
p3-keccak-air = { path = "keccak-air", version = "0.4.2" }
p3-koala-bear = { path = "koala-bear", version = "0.4.2" }
p3-lookup = { path = "lookup", version = "0.4.2" }
p3-matrix = { path = "matrix", version = "0.4.2" }
p3-maybe-rayon = { path = "maybe-rayon", version = "0.4.2" }
p3-mds = { path = "mds", version = "0.4.2" }
p3-merkle-tree = { path = "merkle-tree", version = "0.4.2" }
p3-mersenne-31 = { path = "mersenne-31", version = "0.4.2" }
p3-monty-31 = { path = "monty-31", version = "0.4.2" }
p3-multilinear-util = { path = "multilinear-util", version = "0.4.2" }
p3-poseidon = { path = "poseidon", version = "0.4.2" }
p3-poseidon2 = { path = "poseidon2", version = "0.4.2" }
p3-poseidon2-air = { path = "poseidon2-air", version = "0.4.2" }
p3-rescue = { path = "rescue", version = "0.4.2" }
p3-sha256 = { path = "sha256", version = "0.4.2" }
p3-symmetric = { path = "symmetric", version = "0.4.2" }
p3-uni-stark = { path = "uni-stark", version = "0.4.2" }
p3-util = { path = "util", version = "0.4.2" }

[workspace.package]
# General description field used for the sub-crates that are currently missing a description.
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
version = "0.4.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Plonky3/Plonky3"
homepage = "https://github.com/Plonky3/Plonky3"
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky3"]
categories = ["cryptography::cryptocurrencies"]

[profile.profiling]
inherits = "release"
debug = true
