[workspace.package]
version = "0.2.4-succinct"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/Plonky3/Plonky3"
homepage = "https://github.com/Plonky3/Plonky3"
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky3"]
categories = ["cryptography::cryptocurrencies"]

[workspace]
resolver = "2"
members = [
    "air",
    "baby-bear",
    "blake3",
    "bn254-fr",
    "challenger",
    "circle",
    "commit",
    "dft",
    "field",
    "field-testing",
    "fri",
    "goldilocks",
    "interpolation",
    "koala-bear",
    "keccak",
    "keccak-air",
    "lde",
    "matrix",
    "merkle-tree",
    "maybe-rayon",
    "mersenne-31",
    "monolith",
    "poseidon",
    "poseidon2",
    "rescue",
    "symmetric",
    "util",
    "uni-stark",
]
