[workspace.package]
version = "0.3.2-succinct"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.89"
repository = "https://github.com/Plonky3/Plonky3"
homepage = "https://github.com/Plonky3/Plonky3"
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky3"]
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
p3-air = { path = "air", version = "0.3.2-succinct" }
p3-baby-bear = { path = "baby-bear", version = "0.3.2-succinct" }
p3-blake3 = { path = "blake3", version = "0.3.2-succinct" }
p3-bn254-fr = { path = "bn254-fr", version = "0.3.2-succinct" }
p3-challenger = { path = "challenger", version = "0.3.2-succinct" }
p3-circle = { path = "circle", version = "0.3.2-succinct" }
p3-commit = { path = "commit", version = "0.3.2-succinct" }
p3-dft = { path = "dft", version = "0.3.2-succinct" }
p3-field = { path = "field", version = "0.3.2-succinct" }
p3-field-testing = { path = "field-testing", version = "0.3.2-succinct" }
p3-fri = { path = "fri", version = "0.3.2-succinct" }
p3-goldilocks = { path = "goldilocks", version = "0.3.2-succinct" }
p3-interpolation = { path = "interpolation", version = "0.3.2-succinct" }
p3-koala-bear = { path = "koala-bear", version = "0.3.2-succinct" }
p3-keccak = { path = "keccak", version = "0.3.2-succinct" }
p3-keccak-air = { path = "keccak-air", version = "0.3.2-succinct" }
p3-lde = { path = "lde", version = "0.3.2-succinct" }
p3-matrix = { path = "matrix", version = "0.3.2-succinct" }
p3-merkle-tree = { path = "merkle-tree", version = "0.3.2-succinct" }
p3-maybe-rayon = { path = "maybe-rayon", version = "0.3.2-succinct" }
p3-mersenne-31 = { path = "mersenne-31", version = "0.3.2-succinct" }
p3-monolith = { path = "monolith", version = "0.3.2-succinct" }
p3-mds = { path = "mds", version = "0.3.2-succinct" }
p3-poseidon = { path = "poseidon", version = "0.3.2-succinct" }
p3-poseidon2 = { path = "poseidon2", version = "0.3.2-succinct" }
p3-rescue = { path = "rescue", version = "0.3.2-succinct" }
p3-symmetric = { path = "symmetric", version = "0.3.2-succinct" }
p3-util = { path = "util", version = "0.3.2-succinct" }
p3-uni-stark = { path = "uni-stark", version = "0.3.2-succinct" }

[workspace]
resolver = "2"
members = [
    "air",
    "baby-bear",
    "blake3",
    "bn254-fr",
    "challenger",
    "circle",
    "commit",
    "dft",
    "field",
    "field-testing",
    "fri",
    "goldilocks",
    "interpolation",
    "koala-bear",
    "keccak",
    "keccak-air",
    "lde",
    "matrix",
    "merkle-tree",
    "maybe-rayon",
    "mersenne-31",
    "monolith",
    "poseidon",
    "poseidon2",
    "rescue",
    "symmetric",
    "util",
    "uni-stark",
]
