[package]
name = "p3-air"
description = "Defines the Algebraic Intermediate Representation (AIR) interface and supporting utilities for STARK provers."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field = { path = "../field" }
p3-matrix = { path = "../matrix" }
serde = { version = "1.0.204", features = ["derive","rc"] }

[dev-dependencies]
p3-matrix = { path = "../matrix" }
