[package]
name = "p3-baby-bear"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
nightly-features = ["p3-monty-31/nightly-features"]

[dependencies]
p3-field.workspace = true
p3-mds.workspace = true
p3-monty-31.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true
rand.workspace = true

[dev-dependencies]
num-bigint.workspace = true
rand.workspace = true
p3-field-testing.workspace = true
p3-dft.workspace = true
criterion.workspace = true
serde_json.workspace = true
rand_xoshiro.workspace = true

[[bench]]
name = "bench_field"
harness = false

[[bench]]
name = "extension"
harness = false
