[package]
name = "p3-baby-bear"
description = "An implementation of the Babybear prime field F_p, where p = 2^31 - 2^27 + 1."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
nightly-features = []

[dependencies]
p3-field = { workspace = true }
p3-mds = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
num-bigint = { version = "0.4.3", default-features = false }
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
p3-field-testing = { workspace = true }
rand = { version = "0.8.5", features = ["min_const_gen"] }
criterion = "0.5.1"
rand_chacha = "0.3.1"
serde_json = "1.0.113"
rand_xoshiro = "0.6.0"

[[bench]]
name = "bench_field"
harness = false

[[bench]]
name = "extension"
harness = false
