[package]
name = "p3-baby-stark"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-air = { path = "../air" }
p3-field = { path = "../field" }
p3-commit = { path = "../commit" }
p3-matrix = { path = "../matrix" }

[dev-dependencies]
p3-fri = { path = "../fri" }
p3-ldt = { path = "../ldt" }
p3-merkle-tree = { path = "../merkle-tree" }
p3-mersenne-31 = { path = "../mersenne-31" }
