[package]
name = "p3-batch-stark"
description = "Batched STARK wrapper atop p3-uni-stark that reuses FRI openings across instances."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-air.workspace = true
p3-challenger.workspace = true
p3-commit.workspace = true
p3-field.workspace = true
p3-lookup.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-uni-stark.workspace = true
p3-util.workspace = true

hashbrown.workspace = true
itertools.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
tracing.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-circle.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-fri.workspace = true
p3-keccak.workspace = true
p3-matrix.workspace = true
p3-merkle-tree.workspace = true
p3-mersenne-31.workspace = true
p3-symmetric.workspace = true
rand.workspace = true

[features]
parallel = ["p3-maybe-rayon/parallel"]

[lints]
workspace = true
