[package]
name = "p3-batch-stark"
description = "Batched STARK wrapper atop p3-uni-stark that reuses FRI openings across instances."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-air.workspace = true
p3-challenger.workspace = true
p3-commit.workspace = true
p3-field.workspace = true
p3-lookup.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-uni-stark.workspace = true
p3-util.workspace = true

hashbrown.workspace = true
itertools.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
tracing.workspace = true

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-circle = { path = "../circle" }
p3-commit = { path = "../commit" }
p3-dft = { path = "../dft" }
p3-fri = { path = "../fri" }
p3-keccak = { path = "../keccak" }
p3-matrix = { path = "../matrix" }
p3-merkle-tree = { path = "../merkle-tree" }
p3-mersenne-31 = { path = "../mersenne-31" }
p3-symmetric = { path = "../symmetric" }
postcard = { workspace = true, features = ["alloc"] }
rand.workspace = true

[features]
parallel = ["p3-maybe-rayon/parallel"]

[lints]
workspace = true
