[package]
name = "p3-blake3-air"
# TODO: Replace this generic plonky3 description with one specific to this crate...
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-air.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true

itertools.workspace = true
rand.workspace = true
tracing.workspace = true

[features]
parallel = ["p3-maybe-rayon/parallel"]
