[package]
name = "p3-blake3-air"
description = "An AIR implementation for the Blake3 permutation over fields of size between 2^20 and 2^32."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-air.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true

itertools.workspace = true
rand.workspace = true
tracing.workspace = true

[features]
parallel = ["p3-maybe-rayon/parallel"]
