[package]
name = "p3-blake3"
description = "Implements the BLAKE3 cryptographic hash function with support for chunked and slice-based hashing."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-symmetric.workspace = true
p3-util.workspace = true

blake3.workspace = true

[features]
neon = ["blake3/neon"]
parallel = ["blake3/rayon"]
