[package]
name = "p3-bls12-377-fr"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true

ff = { workspace = true, features = ["derive", "derive_bits"] }
num-bigint.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
halo2curves = { workspace = true, features = ["bits", "derive_serde"] }

# Ark
ark-bls12-377 = { version = "0.4.0" }
ark-serialize = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }

[dev-dependencies]
p3-field-testing.workspace = true

criterion.workspace = true
num-traits.workspace = true
serde_json.workspace = true
zkhash.workspace = true

[features]
default = []
table = [
    "halo2curves/bn256-table",
] # Generate cached table of [0, 2^16) in Bn254Fr at compile time

[[bench]]
name = "bench_field"
harness = false
