[package]
name = "p3-bls12-377-fr"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true

num-bigint.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
lazy_static = { version = "1.5.0" }

# Ark
ark-bls12-377 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
ark-ff        = { version = "0.5.0" }

[dev-dependencies]
p3-field-testing.workspace = true

criterion.workspace = true
num-traits.workspace = true
serde_json.workspace = true

[features]
default = []

[[bench]]
name = "bench_field"
harness = false