[package]
name = "p3-bn254-fr"
description = "Wraps the ark_bn254::Fr field to implement p3-field traits for interoperability."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true

halo2curves = { version = "0.8.0", features = ["bits", "derive_serde"] }
num-bigint.workspace = true
paste.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
p3-field-testing.workspace = true

criterion.workspace = true
serde_json.workspace = true
zkhash = { git = "https://github.com/HorizenLabs/poseidon2" }

[features]
default = []
table = [
    "halo2curves/bn256-table",
] # Generate cached table of [0, 2^16) in Bn254Fr at compile time
asm = ["halo2curves/asm"]

[[bench]]
name = "bench_field"
harness = false
