[package]
name = "p3-bn254-fr"
description = "A wrapper for the ark_bn254::Fr field allowing it to be used in the Plonky3 environment"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }

ff = { version = "0.13", features = ["derive", "derive_bits"] }
num-bigint = { version = "0.4.3", default-features = false }
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
p3-field-testing = { workspace = true }

criterion = "0.5.1"
num-traits = "0.2.16"
serde_json = "1.0.113"
zkhash = { git = "https://github.com/HorizenLabs/poseidon2" }

[[bench]]
name = "bench_field"
harness = false
