[package]
name = "p3-bn254"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = { path = "../field" }
p3-poseidon2 = { path = "../poseidon2" }
p3-symmetric = { path = "../symmetric" }

ark-ff = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false }
lazy_static = "1.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }

zkhash = { git = "https://github.com/HorizenLabs/poseidon2" }


[dev-dependencies]
ark-ff = { version = "^0.4.0", default-features = false }
zkhash = { git = "https://github.com/HorizenLabs/poseidon2" }
rand = { version = "0.8.5", features = ["min_const_gen"] }
criterion = "0.5.1"
