[package]
name = "p3-bn254"
# TODO: Replace this generic plonky3 description with one specific to this crate...
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true

num-bigint.workspace = true
paste.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
p3-field-testing.workspace = true

criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "bench_field"
harness = false
