[package]
name = "p3-bn254"
description = "A wrapper for the ark_bn254::Fr field allowing it to be used in the Plonky3 environment"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true

num-bigint.workspace = true
paste.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
p3-field-testing.workspace = true

criterion.workspace = true
serde_json.workspace = true
zkhash = { git = "https://github.com/HorizenLabs/poseidon2" }

[[bench]]
name = "bench_field"
harness = false
