[package]
name = "p3-brakedown"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-code = { path = "../code" }
p3-field = { path = "../field" }
p3-matrix = { path = "../matrix" }
p3-mersenne-31 = { path = "../mersenne-31" }
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "encode"
harness = false
