[package]
name = "p3-brakedown"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-code = { path = "../code" }
p3-field = { path = "../field" }
p3-lde = { path = "../lde" }
p3-matrix = { path = "../matrix" }
p3-mersenne-31 = { path = "../mersenne-31" }
p3-reed-solomon = { path = "../reed-solomon" }
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "encode"
harness = false
