[package]
name = "p3-challenger"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field.workspace = true
p3-maybe-rayon.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true

tracing.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-goldilocks.workspace = true
