[package]
name = "p3-challenger"
description = "A Fiat-Shamir transcript and challenger framework used to derive random challenges in proof systems."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field = { path = "../field" }
p3-util = { path = "../util" }
p3-maybe-rayon = { path = "../maybe-rayon" }
p3-symmetric = { path = "../symmetric" }
tracing = "0.1.37"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
p3-goldilocks = { path = "../goldilocks" }
