[package]
name = "p3-challenger"
description = "A Fiat–Shamir transcript and challenger framework used to derive random challenges in proof systems."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field.workspace = true
p3-keccak.workspace = true
p3-maybe-rayon.workspace = true
p3-monty-31.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true

num-bigint.workspace = true
thiserror.workspace = true
tiny-keccak = { workspace = true, features = ["shake"] }
tracing.workspace = true

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-goldilocks = { path = "../goldilocks" }
proptest.workspace = true
rand = { workspace = true, features = ["std", "thread_rng"] }

[lints]
workspace = true
