[package]
name = "p3-circle"
description = "A STARK proof system built around the unit circle of a finite field, based on the Circle STARKs paper."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-fri.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-util.workspace = true

itertools.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-keccak = { path = "../keccak" }
p3-merkle-tree = { path = "../merkle-tree" }
p3-mersenne-31 = { path = "../mersenne-31" }
p3-symmetric = { path = "../symmetric" }

criterion.workspace = true
hashbrown.workspace = true
rand.workspace = true
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }

[[bench]]
name = "cfft"
harness = false

[lints]
workspace = true
