[package]
name = "p3-circle"
description = "A STARK proof system built around the unit circle of a finite field, based on the Circle STARKs paper."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-challenger = { path = "../challenger" }
p3-commit = { path = "../commit" }
p3-dft = { path = "../dft" }
p3-field = { path = "../field" }
p3-matrix = { path = "../matrix" }
p3-maybe-rayon = { path = "../maybe-rayon" }
p3-util = { path = "../util" }

tracing = "0.1.37"
itertools = "0.12.0"

[dev-dependencies]
p3-mds = { path = "../mds" }
p3-mersenne-31 = { path = "../mersenne-31" }
p3-merkle-tree = { path = "../merkle-tree" }
p3-poseidon = { path = "../poseidon" }
p3-symmetric = { path = "../symmetric" }

hashbrown = "0.14.3"
rand = "0.8.5"
