[package]
name = "p3-circle"
description = "A STARK proof system built around the unit circle of a finite field, based on the Circle STARKs paper."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-util = { workspace = true }

tracing = "0.1.37"
itertools = "0.12.0"

[dev-dependencies]
p3-mds = { workspace = true }
p3-mersenne-31 = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon = { workspace = true }
p3-symmetric = { workspace = true }

hashbrown = "0.14.3"
rand = "0.8.5"
