[package]
name = "p3-circuit-prover"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]

[dependencies]
hashbrown.workspace = true
p3-air.workspace = true
p3-baby-bear.workspace = true
p3-batch-stark.workspace = true
p3-challenger.workspace = true
p3-circle.workspace = true
p3-circuit.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-fri.workspace = true
p3-goldilocks.workspace = true
p3-keccak.workspace = true
p3-koala-bear.workspace = true
p3-lookup.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-merkle-tree.workspace = true
p3-multilinear-util.workspace = true
p3-poseidon2.workspace = true
p3-poseidon2-air.workspace = true
p3-poseidon2-circuit-air.workspace = true
p3-symmetric.workspace = true
p3-uni-stark.workspace = true
p3-util.workspace = true
p3-whir.workspace = true
postcard = { workspace = true, features = ["alloc"] }
rand.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
unroll.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
p3-batch-stark.workspace = true
p3-test-utils.workspace = true
rand.workspace = true
tracing-forest = { workspace = true, features = ["smallvec"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }

[features]
parallel = ["p3-maybe-rayon/parallel"]
std = []

[[bench]]
name = "prover"
harness = false

[lints]
workspace = true

[[example]]
name = "fibonacci"
path = "examples/fibonacci.rs"

[[example]]
name = "poseidon2_perm_chain"
path = "examples/poseidon2_perm_chain.rs"

[[example]]
name = "poseidon2_perm_merkle"
path = "examples/poseidon2_perm_merkle.rs"
