[package]
name = "p3-commit"
description = "A framework for implementing various cryptographic commitment schemes, including non-hiding variants."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
test-utils = ["dep:p3-dft"]

[dependencies]
p3-challenger = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }

itertools = "0.12.0"
serde = { version = "1.0", default-features = false }

# for testing
p3-dft = { workspace = true, optional = true }

[dev-dependencies]
p3-baby-bear = { workspace = true }
p3-dft = { workspace = true }
rand = "0.8.5"
