[package]
name = "p3-coset"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field.workspace = true
p3-dft.workspace = true
p3-interpolation.workspace = true
p3-matrix.workspace = true
p3-poly.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-goldilocks.workspace = true
itertools.workspace = true
rand.workspace = true
criterion.workspace = true
p3-poly = { workspace = true, features = ["test-utils"] }

[[bench]]
name = "coset"
harness = false