[package]
name = "p3-dft"
description = "A collection of discrete Fourier transform (DFT) implementations for finite fields."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-util.workspace = true

itertools.workspace = true
spin.workspace = true
tracing.workspace = true

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-goldilocks = { path = "../goldilocks" }
p3-mersenne-31 = { path = "../mersenne-31" }
p3-monty-31 = { path = "../monty-31" }

criterion.workspace = true
rand.workspace = true

[features]
parallel = ["p3-maybe-rayon/parallel"]

[[bench]]
name = "fft"
harness = false

[lints]
workspace = true
