[package]
name = "p3-dft"
description = "A collection of discrete Fourier transform (DFT) implementations for finite fields."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field = { path = "../field" }
p3-matrix = { path = "../matrix" }
p3-maybe-rayon = { path = "../maybe-rayon" }
p3-util = { path = "../util" }
tracing = "0.1.37"

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-goldilocks = { path = "../goldilocks" }
p3-mersenne-31 = { path = "../mersenne-31" }
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "fft"
harness = false
